--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,32 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
+    app:flashButtonVisible="true"
     tools:context=".MainActivity">
 
-
-    <com.budiyev.android.codescanner.CodeScannerView
-
-        android:id="@+id/scannerView"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="483dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="1dp"
-        android:layout_marginEnd="-1dp"
-        android:layout_marginBottom="175dp"
-        app:frameCornersRadius="20dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_gravity="center_vertical"
+        >
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="80dp"/>
+
+        <com.budiyev.android.codescanner.CodeScannerView
+            android:id="@+id/scannerView"
+            android:layout_width="match_parent"
+            android:layout_height="485dp"
+            app:autoFocusButtonVisible="false"
+            app:frameAspectRatioHeight="1"
+            app:frameAspectRatioWidth="1"
+            app:frameColor="@color/gold"
+            app:frameCornersRadius="30dp"
+            app:frameCornersSize="50dp"
+            app:frameSize="0.65"
+            app:frameThickness="3dp"
+            app:maskColor="#77000000"/>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="30dp"/>
 
         <TextView
-            android:id="@+id/instructionTextView"
+            android:id="@+id/photoTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/photo"
+            android:textAlignment="center"
+            android:layout_gravity="center"
+            android:textColor="@color/gold"
+            android:textSize="16sp"/>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="15dp"/>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/instruction_text"
-            android:textSize="12sp" />
-    </com.budiyev.android.codescanner.CodeScannerView>
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="15dp"
+            android:orientation="horizontal"
+            android:weightSum="3"
+            >
+            <TextView
+                android:id="@+id/cancelTextView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textSize="16sp"
+                android:text="@string/cancel"
+                android:textAlignment="center"
+                android:layout_weight="1"
+                android:textColor="@color/white"/>
 
-</RelativeLayout>
+            <ImageView
+                android:id="@+id/makePhotoImageView"
+                android:layout_width="0dp"
+                android:layout_height="75dp"
+                android:layout_weight="1"
+                android:clickable="true"
+                android:src="@drawable/ic_round_button"
+                app:tint="@color/white"
+                android:layout_gravity="center_horizontal"/>
+
+
+            <ImageView
+                android:id="@+id/reverseCameraImageView"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:layout_gravity="center"
+                android:clickable="true"
+                android:src="@drawable/ic_reverse_camera"
+                app:tint="@color/white"
+                android:focusable="true" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/instructionTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="140dp"
+        android:lines="2"
+        android:maxLines="2"
+        android:singleLine="false"
+        android:text="@string/instruction_text"
+        android:textAlignment="center"
+        android:textSize="14sp"
+        android:textColor="@color/white"/>
+
+
+</FrameLayout>
